--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,7 +50,8 @@ input:focus {
 
 #btn-register-enviar,
 #btn-delete-enviar,
-#btn-edit-enviar {
+#btn-edit-enviar,
+#btn-edit-enviar-aux {
   margin-top: 15px;
   font-family: "Lato", sans-serif;
 
@@ -76,5 +77,9 @@ input:focus {
 }
 
 .esconder {
+  display: none;
+}
+
+#btn-edit-enviar-aux {
   display: none;
 }
