--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,14 +45,20 @@ label {
   font-family: "Lato", sans-serif;
 }
 
-input {
+input[type="text"],
+input[type="number"],
+input[type="email"],
+input[type="password"] {
   border: none;
   border-bottom: 2px solid #9e9e9e;
   outline: none;
   transition: 0.2s ease-in-out;
 }
 
-input:focus {
+input[type="text"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus {
   border-bottom: 2px solid #218d82;
 }
 
@@ -72,6 +78,24 @@ input:focus {
   font-size: 16px;
   cursor: pointer;
   border-radius: 15px;
+}
+
+#btn-login,
+#btn-registro {
+  font-family: "Lato", sans-serif;
+  border: none;
+  background-color: #008cba; /* Green */
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 15px;
+}
+
+#btn-login:hover,
+#btn-registro:hover {
+  background-color: #056b8d;
 }
 
 .register-product,
@@ -124,4 +148,13 @@ textarea {
 
 .search-product textarea {
   margin-top: 15px;
+}
+
+#loginexists,
+#loginnotexists {
+  font-size: 11px;
+}
+
+a {
+  text-decoration: none;
 }
